# Gin

./: .clang-format  .codecov.yml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Changelist.txt  README.md  annotated.html  azure-pipelines.yml  classADSR-members.html  classADSR.html  classADSRComponent-members.html  classADSRComponent.html  classADSRComponent__inherit__graph.map  classADSRComponent__inherit__graph.md5  classActionMessageLambda-members.html  classActionMessageLambda.html  classAirWindowsDistortion-members.html  classAirWindowsDistortion.html  classAnalogADSR-members.html  classAnalogADSR.html  classAsyncDownload-members.html  classAsyncDownload.html  classAsyncLambdaValueTreeListener-members.html  classAsyncLambdaValueTreeListener.html  classAsyncWebsocket-members.html  classAsyncWebsocket.html  classAudioEquationParser-members.html  classAudioEquationParser.html  classAudioEquationParser__inherit__graph.map  classAudioEquationParser__inherit__graph.md5  classAudioFifo-members.html  classAudioFifo.html  classAudioFunctionHost-members.html  classAudioFunctionHost.html  classAudioFunctionHost__inherit__graph.map  classAudioFunctionHost__inherit__graph.md5  classAudioMetadata-members.html  classAudioMetadata.html  (+1192 more)
.claude/: instructions.md  settings.json  settings.local.json
.github/: FUNDING.yml
.github/workflows/: build_linux.yaml  build_macos.yaml  build_windows.yaml  coverage.yaml  update_docs.yaml
ci/: build.sh  config_cmake.sh
ci/linux/: build
ci/mac/: Demo.entitlements  build
ci/toolchains/: base.json  clang.json  gcc.json  gcc11.json  vs.json  xcode.json
ci/win/: build.bat
doxygen/: Doxyfile  Makefile  README.txt  process_source_files.py
examples/Demo/: CMakeLists.txt  Demo.jucer
examples/Demo/Builds/LinuxMakefile/: Makefile
examples/Demo/Builds/MacOSX/: Info-App.plist
examples/Demo/Builds/MacOSX/Demo.xcodeproj/: project.pbxproj
examples/Demo/Builds/MacOSX/Demo.xcodeproj/xcuserdata/rrabien.xcuserdatad/xcschemes/: Demo - App.xcscheme  xcschememanagement.plist
examples/Demo/Builds/VisualStudio2017/: Demo.sln  Demo_App.vcxproj  Demo_App.vcxproj.filters  resources.rc
examples/Demo/Builds/iOS/: Info-App.plist
examples/Demo/Builds/iOS/Demo.xcodeproj/: project.pbxproj
examples/Demo/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  include_gin.cpp  include_gin.mm  include_gin_dsp.cpp  include_gin_dsp.mm  include_gin_metadata.cpp  include_gin_metadata.mm  include_gin_network.cpp  include_gin_network.mm  include_gin_network_auth.cpp  include_gin_network_mbed1.c  include_gin_network_mbed2.c  include_gin_network_mbed3.c  include_gin_network_mbed4.c  include_gin_network_mbed5.c  include_gin_network_mbed6.c  include_gin_network_mbed7.c  include_gin_network_mbed8.c  include_juceex.cpp  include_juceex.mm
examples/Demo/Resources/: CMakeLists.txt
examples/Demo/Source/: Demos.h  Main.cpp  MainComponent.cpp  MainComponent.h
examples/Demo/Source/Demos/: AsyncUpdateDemo.h  BLLTDemo.h  BlendingDemo.h  BmpImageDemo.h  BoxBlurDemo.h  CatenaryDemo.h  ComponentGridDemo.h  DemosCommon.h  DownloadManagerDemo.h  DownloadManagerToSaveToFileDemo.h  EasingDemo.h  ElevatedFileCopyDemo.h  EllipseDemo.h  EquationParserDemo.h  FileSystemWatcherDemo.h  GradientMapDemo.h  ImageEffectsDemo.h  ImageResizeDemo.h  LagrangeDemo.h  LayoutDemo.h  LeastSquaresDemo.h  LinearDemo.h  MapDemo.h  MessagePackDemo.h  MetadataDemo.h  MidiFilePlayerDemo.h  NanoSVGDemo.h  PerlinNoiseDemo.h  SVGDemo.h  SamplePlayerDemo.h  SemaphoreDemo.h  SharedMemoryDemo.h  SolidBlendingDemo.h  SplineDemo.h  TextRenderDemo.h  ValueTreeJsonDemo.h  Wavetable3DDemo.h  WavetableDemo.h  WebpImageDemo.h  WebsocketDemo.h  (+2 more)
examples/Effect/: CMakeLists.txt
examples/Effect/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/Synth/: CMakeLists.txt  Synth.jucer
examples/UnitTests/: CMakeLists.txt
examples/UnitTests/Resources/: CMakeLists.txt
examples/UnitTests/Source/: GinEasingTests.cpp  GinGeometryTests.cpp  GinUtilTests.cpp  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
modules/: CMakeLists.txt
modules/gin/: gin.cpp  gin.h  gin.mm  gin_bsdiff.c
modules/gin_3d/: gin_3d.cpp  gin_3d.h
modules/gin_controllers/: gin_controllers.cpp  gin_controllers.h  gin_controllers.mm
modules/gin_dsp/: gin_dsp.cpp  gin_dsp.h  gin_dsp.mm
modules/gin_graphics/: gin_graphics.cpp  gin_graphics.h  gin_graphics.mm  gin_graphics_webp_1.c  gin_graphics_webp_2.c  gin_graphics_webp_3.c  gin_graphics_webp_4.c  gin_graphics_webp_5.c  gin_graphics_webp_6.c  gin_graphics_webp_7.c  gin_graphics_webp_8.c  gin_graphics_webp_9.c  webp_warnings.h
modules/gin_gui/: gin_gui.cpp  gin_gui.h  gin_gui.mm
modules/gin_location/: gin_location.cpp  gin_location.h  gin_location.mm
modules/gin_metadata/: README.md  gin_metadata.cpp  gin_metadata.h  gin_metadata.mm
modules/gin_network/: gin_network.cpp  gin_network.h  gin_network.mm  gin_network_auth.cpp  gin_network_mbed1.c  gin_network_mbed2.c  gin_network_mbed3.c  gin_network_mbed4.c  gin_network_mbed5.c  gin_network_mbed6.c  gin_network_mbed7.c  gin_network_mbed8.c
modules/gin_plugin/: README.md  gin_plugin.cpp  gin_plugin.h  gin_plugin.mm
modules/gin_simd/: gin_simd.cpp  gin_simd.h  gin_simd.mm
modules/gin_standaloneplugin/: gin_standaloneplugin.cpp  gin_standaloneplugin.h
modules/gin_svg/: gin_svg.cpp  gin_svg.h  gin_svg.mm
modules/gin_webp/: gin_webp.cpp  gin_webp.h  gin_webp.mm  gin_webp_1.c  gin_webp_10.c  gin_webp_2.c  gin_webp_3.c  gin_webp_4.c  gin_webp_5.c  gin_webp_6.c  (+4 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+122 more)
(+662 files in other folders)
